<resources>
    <string name="app_name">ClimApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign - in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">User or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cloudy">Cloudy</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="hailstone">Hailstone</string>
    <string name="ok">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="rain">Rain</string>
    <string name="icy">Icy</string>
    <string name="sunny">Sunny</string>
    <string name="windy">Windy</string>
    <string name="register">Sign - Up</string>
    <string name="user">User</string>
    <string name="visible">vi</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="numpoints">numPoints</string>
    <string name="namezone">namezone</string>
    <string name="checkbox">CheckBox</string>
    <string name="textview">TextView</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="_250">250</string>
    <string name="points">Points</string>
    <string name="name">Name:</string>

</resources>
