<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.eci.cosw.climapp.controller.EditProfile"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_menu_camera"
            tools:src="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/newnameuser"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView7"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="11dp"
            android:text="@string/user"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#fff"
            android:textSize="21sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="53dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="105dp"
                android:layout_height="36dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/common_google_signin_btn_icon_dark_normal_background" />

            <EditText
                android:id="@+id/newemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/email"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="337dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/common_google_signin_btn_icon_dark_normal_background" />

            <EditText
                android:id="@+id/newpassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:inputType="textWebPassword"
                android:paddingStart="20dp"
                android:text="@string/prompt_password"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/numpoints"
                android:src="@drawable/common_google_signin_btn_icon_dark_normal_background" />

            <EditText
                android:id="@+id/newconfirmpassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:inputType="textWebPassword"
                android:paddingStart="20dp"
                android:text="@string/prompt_password"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</LinearLayout>