<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:subtitleTextColor="@android:color/background_light"
        app:title="Create a report..."
        app:titleTextColor="@android:color/background_light" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="138dp"
        tools:backgroundTint="@color/colorAccent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="79dp">

                <ImageView
                    android:id="@+id/rainImg"
                    android:layout_width="136dp"
                    android:layout_height="86dp"
                    android:contentDescription="@string/rain"
                    android:src="@drawable/thunderstorm_logo" />

                <ImageView
                    android:id="@+id/hailstoneImg"
                    android:layout_width="128dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/hailstone"
                    android:src="@drawable/hailstomp_logo" />

                <ImageView
                    android:id="@+id/thunderstormImg"
                    android:layout_width="132dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/thunderstorm"
                    android:src="@drawable/rain_logo" />

            </TableRow>

            <RadioGroup
                android:id="@+id/groupradio"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/tunderstorm"
                    android:layout_width="136dp"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:text="@string/thunderstorm"
                    android:textColor="@android:color/background_light"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="Thunderstorm" />

                <RadioButton
                    android:id="@+id/hailstone"
                    android:layout_width="131dp"
                    android:layout_height="64dp"
                    android:checked="false"
                    android:contextClickable="false"
                    android:fontFamily="casual"
                    android:text="@string/hailstone"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Hailstone" />

                <RadioButton
                    android:id="@+id/rain"
                    android:layout_width="130dp"
                    android:layout_height="64dp"
                    android:fontFamily="casual"
                    android:text="@string/rain"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RadioGroup>

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cloudyImg"
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:contentDescription="@string/cloudy"
                    android:src="@drawable/cloudy_logo" />

                <ImageView
                    android:id="@+id/sunnyImg"
                    android:layout_width="match_parent"
                    android:layout_height="91dp"
                    android:contentDescription="@string/sunny"
                    android:src="@drawable/sunny_logo" />

                <ImageView
                    android:id="@+id/icyImg"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:contentDescription="@string/icy"
                    android:src="@drawable/icy_logo" />

                <ImageView
                    android:id="@+id/windyImg"
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:contentDescription="@string/windy"
                    android:src="@drawable/windy_logo"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/groupradio1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/cloudy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/cloudy"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/sunny"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/sunny"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/icy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/icy"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/windy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/windy"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/acept"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:baselineAligned="false"
            android:fontFamily="casual"
            android:text="@string/ok"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="377dp" />

        <Space
            android:layout_width="23dp"
            android:layout_height="47dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:fontFamily="casual"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="388dp" />

    </LinearLayout>

</LinearLayout>
