<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="edu.eci.cosw.climapp.controller.fragmentEditProfile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="16dp"
            android:contentDescription="TODO"
            android:src="@drawable/picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btn_image"
            android:layout_width="52dp"
            android:layout_height="59dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_camera_alt_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/profilePicture"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.928" android:contentDescription="TODO" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/name"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="Email:"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="Progress"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_level"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="casual"
            android:hint="Level"
            android:inputType="number"
            android:text="5"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textColorLink="@android:color/holo_orange_dark"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lbl_level"
            app:layout_constraintTop_toBottomOf="@+id/Progress" />

        <ProgressBar
            android:id="@+id/progressBarLevel"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="350dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:max="100"
            android:progress="80"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_level"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lbl_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="12dp"
            android:fontFamily="casual"
            android:text="Level:"
            android:textColor="@android:color/background_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Progress" />

        <TextView
            android:id="@+id/lbl_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:enabled="false"
            android:fontFamily="casual"
            android:text="@string/points"
            android:textColor="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.254"
            app:layout_constraintStart_toEndOf="@+id/txt_level"
            app:layout_constraintTop_toBottomOf="@+id/Progress" />

        <EditText
            android:id="@+id/txt_points"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="casual"
            android:inputType="number"
            android:text="@string/_250"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lbl_points"
            app:layout_constraintTop_toBottomOf="@+id/Progress" />
    </android.support.constraint.ConstraintLayout>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/back" />

        <Space
            android:layout_width="28dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:text="@string/save" />
    </TableRow>


</LinearLayout>